--- a/source/style.css
+++ b/source/style.css
@@ -167,3 +167,20 @@ button {
 button:hover {
     background-color: #5aa3a0; /* Darken button color on hover */
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* Aspect ratio for 16:9 (315 / 560 = 0.5625, or 56.25%) */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    width: 100%;
+  }
+  
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
