--- a/source/style.css
+++ b/source/style.css
@@ -174,6 +174,7 @@ button:hover {
     height: 0;
     overflow: hidden;
     width: 100%;
+    max-width: 560px;
     margin: 0 auto; /* Centers the container horizontally */
 }
 
@@ -197,11 +198,9 @@ button:hover {
     .video-container {
         max-width: 100%; /* Allow video to be full width on mobile */
     }
-}
 
-/* Prevents the video from expanding too large on larger screens */
-@media (min-width: 769px) {
-    .video-container {
-        max-width: 560px; /* Keeps the video at its original size on larger screens */
+    .video-container iframe {
+        width: 100%; /* Make the iframe scale down to fit smaller screens */
+        height: auto; /* Adjust the height accordingly to maintain aspect ratio */
     }
 }
